--- a/index.html
+++ b/index.html
@@ -255,6 +255,10 @@
 <!-- =============================
      LOAD QUESTIONS DATA FIRST
      ============================= -->
+<!-- PDF Libraries (loaded only when email is clicked) -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+  
 <script src="questions.js"></script>
 
 <!-- =============================
