--- a/index.html
+++ b/index.html
@@ -3,267 +3,83 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>US 24355 – Materials Knowledge</title>
+  <!-- Title injected by script.js -->
+  <title id="page-title">Loading...</title>
   <style>
-    /* =============================
-       BASIC RESET & TYPOGRAPHY
-       ============================= */
     * { margin:0; padding:0; box-sizing:border-box; }
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #f4f6f9;
-      color: #2c3e50;
-      line-height: 1.6;
-      padding: 20px;
-    }
+    body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: #f4f6f9; color: #2c3e50; line-height: 1.6; padding: 20px; }
     .container { max-width: 900px; margin: auto; background: white; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 20px rgba(0,0,0,0.1); }
-
-    /* =============================
-       HEADER
-       ============================= */
-    header {
-      background: #1a4971;
-      color: white;
-      padding: 20px;
-      text-align: center;
-    }
+    header { background: #1a4971; color: white; padding: 20px; text-align: center; }
     header h1 { margin: 0; font-size: 1.8rem; }
     header p { margin: 5px 0 0; font-size: 1rem; opacity: 0.9; }
-
-    /* =============================
-       FORM SECTION
-       ============================= */
-    .form-section {
-      padding: 25px;
-      border-bottom: 1px solid #eee;
-    }
-    .form-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-      gap: 15px;
-      margin-bottom: 20px;
-    }
+    .form-section { padding: 25px; border-bottom: 1px solid #eee; }
+    .form-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 15px; margin-bottom: 20px; }
     label { display: block; margin-bottom: 6px; font-weight: 600; color: #2c3e50; }
-    input, select, textarea {
-      width: 100%;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      font-size: 1rem;
-      transition: border 0.2s;
-    }
-    input:focus, select:focus, textarea:focus {
-      outline: none;
-      border-color: #1a4971;
-      box-shadow: 0 0 0 2px rgba(26,73,113,0.2);
-    }
-    .locked-msg {
-      font-size: 0.9rem;
-      color: #e74c3c;
-      margin-top: 5px;
-    }
+    input, select, textarea { width: 100%; padding: 10px; border: 1px solid #ccc; border-radius: 6px; font-size: 1rem; transition: border 0.2s; }
+    input:focus, select:focus, textarea:focus { outline: none; border-color: #1a4971; box-shadow: 0 0 0 2px rgba(26,73,113,0.2); }
+    .locked-msg { font-size: 0.9rem; color: #e74c3c; margin-top: 5px; }
     .hidden { display: none; }
-
-    /* =============================
-       ASSESSMENT HEADER
-       ============================= */
-    .assessment-header {
-      background: #1a4971;
-      color: white;
-      padding: 15px;
-      border-radius: 10px;
-      margin: 20px 0;
-    }
+    .assessment-header { background: #1a4971; color: white; padding: 15px; border-radius: 10px; margin: 20px 0; }
     .assessment-header h2 { margin: 0; font-size: 1.5rem; }
     .assessment-header p { margin: 5px 0 0; font-size: 1rem; }
-
-    /* =============================
-       QUESTIONS
-       ============================= */
-    .q {
-      background: #f8f9fa;
-      padding: 18px;
-      margin-bottom: 18px;
-      border-radius: 8px;
-      border-left: 4px solid #1a4971;
-    }
-    .q strong {
-      color: #2c3e50;
-      font-size: 1.1rem;
-    }
-    .answer-field {
-      margin-top: 10px;
-      font-family: inherit;
-    }
-
-    /* =============================
-       BUTTONS
-       ============================= */
-    .btn {
-      background: #1a4971;
-      color: white;
-      border: none;
-      padding: 12px 20px;
-      font-size: 1rem;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: background 0.2s;
-      margin-right: 10px;
-    }
+    .q { background: #f8f9fa; padding: 18px; margin-bottom: 18px; border-radius: 8px; border-left: 4px solid #1a4971; }
+    .q strong { color: #2c3e50; font-size: 1.1rem; }
+    .answer-field { margin-top: 10px; font-family: inherit; }
+    .btn { background: #1a4971; color: white; border: none; padding: 12px 20px; font-size: 1rem; border-radius: 6px; cursor: pointer; transition: background 0.2s; margin-right: 10px; }
     .btn:hover { background: #0f3a56; }
-    .btn-secondary {
-      background: #7f8c8d;
-    }
+    .btn-secondary { background: #7f8c8d; }
     .btn-secondary:hover { background: #95a5a6; }
-    .btn-group {
-      margin-top: 20px;
-      text-align: center;
-    }
-
-    /* =============================
-       RESULTS
-       ============================= */
-    .result-section {
-      padding: 25px;
-      text-align: center;
-    }
-    .result-header {
-      margin-bottom: 25px;
-    }
-    .grade {
-      font-size: 2.5rem;
-      font-weight: bold;
-      color: #1a4971;
-    }
-    .grade small {
-      font-size: 1.2rem;
-      color: #7f8c8d;
-    }
-    .feedback {
-      text-align: left;
-      padding: 15px;
-      margin: 12px 0;
-      border-radius: 8px;
-      background: #f8f9fa;
-    }
+    .btn-group { margin-top: 20px; text-align: center; }
+    .result-section { padding: 25px; text-align: center; }
+    .result-header { margin-bottom: 25px; }
+    .grade { font-size: 2.5rem; font-weight: bold; color: #1a4971; }
+    .grade small { font-size: 1.2rem; color: #7f8c8d; }
+    .feedback { text-align: left; padding: 15px; margin: 12px 0; border-radius: 8px; background: #f8f9fa; }
     .correct { border-left: 5px solid #27ae60; }
     .partial { border-left: 5px solid #f39c12; }
-    .wrong   { border-left: 5px solid #e74c3c; }
-
-    /* =============================
-       TOAST NOTIFICATION
-       ============================= */
-    .toast {
-      position: fixed;
-      bottom: 30px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: #2c3e50;
-      color: white;
-      padding: 12px 24px;
-      border-radius: 30px;
-      font-size: 0.95rem;
-      opacity: 0;
-      transition: opacity 0.3s ease;
-      z-index: 1000;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-    }
-
-    /* =============================
-       RESPONSIVE
-       ============================= */
-    @media (max-width: 600px) {
-      .form-grid { grid-template-columns: 1fr; }
-      .btn { width: 100%; margin: 8px 0; }
-    }
+    .wrong { border-left: 5px solid #e74c3c; }
+    .toast { position: fixed; bottom: 30px; left: 50%; transform: translateX(-50%); background: #2c3e50; color: white; padding: 12px 24px; border-radius: 30px; font-size: 0.95rem; opacity: 0; transition: opacity 0.3s ease; z-index: 1000; box-shadow: 0 4px 12px rgba(0,0,0,0.2); }
+    @media (max-width: 600px) { .form-grid { grid-template-columns: 1fr; } .btn { width: 100%; margin: 8px 0; } }
   </style>
 </head>
 <body>
 
 <div class="container">
-
-  <!-- =============================
-       HEADER
-       ============================= -->
   <header>
-    <h1>US 24355 – Materials Knowledge</h1>
-    <p>Pukekohe High School – All 5 Parts</p>
+    <h1 id="header-title">Loading...</h1>
+    <p id="header-subtitle">Loading...</p>
   </header>
 
-  <!-- =============================
-       STUDENT INFO FORM
-       ============================= -->
   <section class="form-section" id="form">
     <div class="form-grid">
+      <div><label for="name">Student Name</label><input type="text" id="name" placeholder="Enter your name" required /></div>
       <div>
-        <label for="name">Student Name</label>
-        <input type="text" id="name" placeholder="Enter your name" required />
+        <label for="id">Student ID</label><input type="text" id="id" placeholder="e.g. 12345" required />
+        <div id="locked-msg" class="locked-msg hidden">ID locked to: <strong id="locked-id"></strong></div>
       </div>
-      <div>
-        <label for="id">Student ID</label>
-        <input type="text" id="id" placeholder="e.g. 12345" required />
-        <div id="locked-msg" class="locked-msg hidden">
-          ID locked to: <strong id="locked-id"></strong>
-        </div>
-      </div>
-      <div>
-        <label for="teacher">Teacher</label>
-        <select id="teacher" required>
-          <option value="">Select teacher</option>
-        </select>
-      </div>
-      <div>
-        <label for="assessmentSelector">Assessment Part</label>
-        <select id="assessmentSelector">
-          <option value="">Select part</option>
-        </select>
-      </div>
+      <div><label for="teacher">Teacher</label><select id="teacher" required><option value="">Select teacher</option></select></div>
+      <div><label for="assessmentSelector">Assessment Part</label><select id="assessmentSelector"><option value="">Select part</option></select></div>
     </div>
-
-    <div class="btn-group">
-      <button class="btn" onclick="loadAssessment()">Load Assessment</button>
-    </div>
-
-    <!-- Questions injected here -->
+    <div class="btn-group"><button class="btn" onclick="loadAssessment()">Load Assessment</button></div>
     <div id="questions"></div>
-
-    <div class="btn-group">
-      <button class="btn" onclick="submitWork()">Submit & Grade</button>
-    </div>
+    <div class="btn-group"><button class="btn" onclick="submitWork()">Submit & Grade</button></div>
   </section>
 
-  <!-- =============================
-       RESULTS SECTION
-       ============================= -->
   <section class="result-section hidden" id="result">
     <div class="result-header">
       <h2>Assessment Complete!</h2>
-      <p><strong id="student"></strong> → <span id="teacher-name"></span></p>
+      <p><strong id="student"></strong> to <span id="teacher-name"></span></p>
       <div class="grade" id="grade"></div>
     </div>
-
     <div id="answers"></div>
-
     <div class="btn-group">
-      <button class="btn" onclick="emailWork()">Email Results (PDF)</button>
+      <button class="btn" onclick="emailWork()">Email via Default App</button>
       <button class="btn btn-secondary" onclick="back()">Back to Form</button>
     </div>
   </section>
-
 </div>
 
-<!-- =============================
-     LOAD QUESTIONS DATA FIRST
-     ============================= -->
-<!-- PDF Libraries (loaded only when email is clicked) -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-  
 <script src="questions.js"></script>
-
-<!-- =============================
-     MAIN LOGIC
-     ============================= -->
 <script src="script.js"></script>
 
 </body>
