--- a/index.html
+++ b/index.html
@@ -3,51 +3,51 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <!-- Title injected by script.js -->
-  <title id="page-title">Loading...</title>
+  <title id="page-title">Loading…</title>
   <style>
-    * { margin:0; padding:0; box-sizing:border-box; }
-    body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: #f4f6f9; color: #2c3e50; line-height: 1.6; padding: 20px; }
-    .container { max-width: 900px; margin: auto; background: white; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 20px rgba(0,0,0,0.1); }
-    header { background: #1a4971; color: white; padding: 20px; text-align: center; }
-    header h1 { margin: 0; font-size: 1.8rem; }
-    header p { margin: 5px 0 0; font-size: 1rem; opacity: 0.9; }
-    .form-section { padding: 25px; border-bottom: 1px solid #eee; }
-    .form-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 15px; margin-bottom: 20px; }
-    label { display: block; margin-bottom: 6px; font-weight: 600; color: #2c3e50; }
-    input, select, textarea { width: 100%; padding: 10px; border: 1px solid #ccc; border-radius: 6px; font-size: 1rem; transition: border 0.2s; }
-    input:focus, select:focus, textarea:focus { outline: none; border-color: #1a4971; box-shadow: 0 0 0 2px rgba(26,73,113,0.2); }
-    .locked-msg { font-size: 0.9rem; color: #e74c3c; margin-top: 5px; }
-    .hidden { display: none; }
-    .assessment-header { background: #1a4971; color: white; padding: 15px; border-radius: 10px; margin: 20px 0; }
-    .assessment-header h2 { margin: 0; font-size: 1.5rem; }
-    .assessment-header p { margin: 5px 0 0; font-size: 1rem; }
-    .q { background: #f8f9fa; padding: 18px; margin-bottom: 18px; border-radius: 8px; border-left: 4px solid #1a4971; }
-    .q strong { color: #2c3e50; font-size: 1.1rem; }
-    .answer-field { margin-top: 10px; font-family: inherit; }
-    .btn { background: #1a4971; color: white; border: none; padding: 12px 20px; font-size: 1rem; border-radius: 6px; cursor: pointer; transition: background 0.2s; margin-right: 10px; }
-    .btn:hover { background: #0f3a56; }
-    .btn-secondary { background: #7f8c8d; }
-    .btn-secondary:hover { background: #95a5a6; }
-    .btn-group { margin-top: 20px; text-align: center; }
-    .result-section { padding: 25px; text-align: center; }
-    .result-header { margin-bottom: 25px; }
-    .grade { font-size: 2.5rem; font-weight: bold; color: #1a4971; }
-    .grade small { font-size: 1.2rem; color: #7f8c8d; }
-    .feedback { text-align: left; padding: 15px; margin: 12px 0; border-radius: 8px; background: #f8f9fa; }
-    .correct { border-left: 5px solid #27ae60; }
-    .partial { border-left: 5px solid #f39c12; }
-    .wrong { border-left: 5px solid #e74c3c; }
-    .toast { position: fixed; bottom: 30px; left: 50%; transform: translateX(-50%); background: #2c3e50; color: white; padding: 12px 24px; border-radius: 30px; font-size: 0.95rem; opacity: 0; transition: opacity 0.3s ease; z-index: 1000; box-shadow: 0 4px 12px rgba(0,0,0,0.2); }
-    @media (max-width: 600px) { .form-grid { grid-template-columns: 1fr; } .btn { width: 100%; margin: 8px 0; } }
+    /* (same CSS you already have – no changes needed) */
+    *{margin:0;padding:0;box-sizing:border-box}
+    body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;background:#f4f6f9;color:#2c3e50;line-height:1.6;padding:20px}
+    .container{max-width:900px;margin:auto;background:#fff;border-radius:12px;overflow:hidden;box-shadow:0 4px 20px rgba(0,0,0,.1)}
+    header{background:#1a4971;color:#fff;padding:20px;text-align:center}
+    header h1{margin:0;font-size:1.8rem}
+    header p{margin:5px 0 0;font-size:1rem;opacity:.9}
+    .form-section{padding:25px;border-bottom:1px solid #eee}
+    .form-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:15px;margin-bottom:20px}
+    label{display:block;margin-bottom:6px;font-weight:600;color:#2c3e50}
+    input,select,textarea{width:100%;padding:10px;border:1px solid #ccc;border-radius:6px;font-size:1rem;transition:border .2s}
+    input:focus,select:focus,textarea:focus{outline:none;border-color:#1a4971;box-shadow:0 0 0 2px rgba(26,73,113,.2)}
+    .locked-msg{font-size:.9rem;color:#e74c3c;margin-top:5px}
+    .hidden{display:none}
+    .assessment-header{background:#1a4971;color:#fff;padding:15px;border-radius:10px;margin:20px 0}
+    .assessment-header h2{margin:0;font-size:1.5rem}
+    .assessment-header p{margin:5px 0 0;font-size:1rem}
+    .q{background:#f8f9fa;padding:18px;margin-bottom:18px;border-radius:8px;border-left:4px solid #1a4971}
+    .q strong{color:#2c3e50;font-size:1.1rem}
+    .answer-field{margin-top:10px;font-family:inherit}
+    .btn{background:#1a4971;color:#fff;border:none;padding:12px 20px;font-size:1rem;border-radius:6px;cursor:pointer;transition:background .2s;margin-right:10px}
+    .btn:hover{background:#0f3a56}
+    .btn-secondary{background:#7f8c8d}
+    .btn-secondary:hover{background:#95a5a6}
+    .btn-group{margin-top:20px;text-align:center}
+    .result-section{padding:25px;text-align:center}
+    .result-header{margin-bottom:25px}
+    .grade{font-size:2.5rem;font-weight:bold;color:#1a4971}
+    .grade small{font-size:1.2rem;color:#7f8c8d}
+    .feedback{text-align:left;padding:15px;margin:12px 0;border-radius:8px;background:#f8f9fa}
+    .correct{border-left:5px solid #27ae60}
+    .partial{border-left:5px solid #f39c12}
+    .wrong{border-left:5px solid #e74c3c}
+    .toast{position:fixed;bottom:30px;left:50%;transform:translateX(-50%);background:#2c3e50;color:#fff;padding:12px 24px;border-radius:30px;font-size:.95rem;opacity:0;transition:opacity .3s;z-index:1000;box-shadow:0 4px 12px rgba(0,0,0,.2)}
+    @media(max-width:600px){.form-grid{grid-template-columns:1fr}.btn{width:100%;margin:8px 0}}
   </style>
 </head>
 <body>
 
 <div class="container">
   <header>
-    <h1 id="header-title">Loading...</h1>
-    <p id="header-subtitle">Loading...</p>
+    <h1 id="header-title">Loading…</h1>
+    <p id="header-subtitle">Loading…</p>
   </header>
 
   <section class="form-section" id="form">
