--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#1a4971">
+  <link rel="manifest" href="manifest.webmanifest">
   <title id="page-title">Loading…</title>
   <style>
-    /* (same CSS you already have – paste it here) */
     *{margin:0;padding:0;box-sizing:border-box}
     body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;background:#f4f6f9;color:#2c3e50;line-height:1.6;padding:20px}
     .container{max-width:900px;margin:auto;background:#fff;border-radius:12px;overflow:hidden;box-shadow:0 4px 20px rgba(0,0,0,.1)}
@@ -49,47 +50,42 @@
     <h1 id="header-title">Loading…</h1>
     <p id="header-subtitle">Loading…</p>
   </header>
-
   <section class="form-section" id="form">
     <div id="loading">Loading assessment data…</div>
-
     <div class="form-grid">
-      <div><label for="name">Student Name</label><input type="text" id="name" placeholder="Enter your name" required /></div>
+      <div><label for="name">Student Name</label><input type="text" id="name" placeholder="Enter your name" autocomplete="name" required /></div>
       <div>
-        <label for="id">Student ID</label><input type="text" id="id" placeholder="e.g. 12345" required />
+        <label for="id">Student ID</label><input type="text" id="id" placeholder="e.g. 12345" autocomplete="off" required />
         <div id="locked-msg" class="locked-msg hidden">ID locked to: <strong id="locked-id"></strong></div>
       </div>
-      <div><label for="teacher">Teacher</label><select id="teacher" required><option value="">Select teacher</option></select></div>
+      <div><label for="teacher">Teacher</label><select id="teacher" required aria-live="polite"><option value="">Select teacher</option></select></div>
       <div><label for="assessmentSelector">Assessment Part</label><select id="assessmentSelector"><option value="">Select part</option></select></div>
     </div>
-
-    <div class="btn-group"><button class="btn" onclick="loadAssessment()">Load Assessment</button></div>
-
+    <div class="btn-group"><button type="button" id="load-btn" class="btn">Load Assessment</button></div>
     <div id="questions"></div>
-
-    <div class="btn-group"><button class="btn" onclick="submitWork()">Submit & Grade</button></div>
+    <div class="btn-group"><button type="button" id="submit-btn" class="btn">Submit & Grade</button></div>
   </section>
-
   <section class="result-section hidden" id="result">
     <div class="result-header">
       <h2>Assessment Complete!</h2>
       <p><strong id="student"></strong> to <span id="teacher-name"></span></p>
-      <div class="grade" id="grade"></div>
+      <h3 class="grade" id="grade" aria-live="polite"></h3>
     </div>
     <div id="answers"></div>
     <div class="btn-group">
-      <button class="btn" onclick="emailWork()">Email via Default App</button>
-      <button class="btn btn-secondary" onclick="back()">Back to Form</button>
+      <button type="button" id="email-btn" class="btn">Email via Default App</button>
+      <button type="button" id="back-btn" class="btn btn-secondary">Back to Form</button>
     </div>
   </section>
 </div>
 
-<!-- Modern browsers – ES modules -->
-<script type="module" src="script.js"></script>
+<div id="toast" class="toast hidden" role="status" aria-live="polite"></div>
 
-<!-- Very old browsers – show a friendly message -->
+<script type="module">
+  import './script.js';
+</script>
 <script nomodule>
-  alert("Your browser is too old for this app. Please use Chrome, Edge, Firefox or Safari (latest version).");
+  alert("Your browser is too old. Please use Chrome, Edge, Firefox, or Safari.");
 </script>
 </body>
 </html>
