--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
 </div>
 
 <!-- Load the application logic. Using a regular script tag avoids issues with ES module loading via the file:// protocol. -->
-<script src="script.js" defer></script>
+ <script src="script.js?v=3" defer></script>
+
 </body>
 </html>
