--- a/index.html
+++ b/index.html
@@ -113,14 +113,16 @@
     @media(max-width:600px){.form-grid{grid-template-columns:1fr}.btn{width:100%;margin:8px 0}}
 
     
-  .q-img {
-    max-width: 200px;
-    width: 100%;
-    height: auto;
-    margin: 8px 0;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    display: block;
+  /* Question image styling */
+.q-img {
+  max-width: 200px;   /* ← adjust as needed */
+  width: 100%;
+  height: auto;
+  margin: 8px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  display: block;
+}
 
 
     
