--- a/index.html
+++ b/index.html
@@ -113,16 +113,16 @@
     @media(max-width:600px){.form-grid{grid-template-columns:1fr}.btn{width:100%;margin:8px 0}}
 
     
-  /* Question image styling */
 .q-img {
-  max-width: 200px;   /* ← adjust as needed */
   width: 100%;
+  max-width: 100%;
   height: auto;
-  margin: 8px 0;
+  margin: 10px 0;
+  display: block;
   border: 1px solid #ccc;
   border-radius: 4px;
-  display: block;
 }
+
 
 
     
