--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@
   border-radius: 4px;
 }
 
+.q.correct { background:#e8f8ea; }
+.q.partial { background:#fff8e5; }
+.q.wrong   { background:#fdeaea; }
 
 
     
