--- a/index.html
+++ b/index.html
@@ -127,6 +127,14 @@
 .q.partial { background:#fff8e5; }
 .q.wrong   { background:#fdeaea; }
 
+.hint-inline {
+  margin-top: 10px;
+  font-size: 0.95rem;
+  background: #fff8e5;
+  border-left: 4px solid #f39c12;
+  padding: 8px 10px;
+  border-radius: 6px;
+}
 
     
     
