--- a/index.html
+++ b/index.html
@@ -170,10 +170,10 @@
       <div class="grade" id="grade"></div>
     </div>
     <div id="answers"></div>
-    <div class="btn-group">
-      <button class="btn" onclick="emailWork()">Email via Default App</button>
-      <button class="btn btn-secondary" onclick="back()">Back to Form</button>
-    </div>
+   <div class="btn-group">
+  <button class="btn" id="emailBtn" onclick="emailWork()" disabled>Email via Default App</button>
+  <button class="btn btn-secondary" onclick="back()">Back to Form</button>
+</div>
   </section>
 </div>
 
